adds parallelism to tile drawing